비공개, 마감 시 참석 불가 / 참가자 있을 경우 비공개 불가, 공개마감 UI 적용

--- a/views/home_bgn.ejs
+++ b/views/home_bgn.ejs
@@ -87,8 +87,13 @@
                   <div class="tour">
                       <div class="tour_image" onclick="location.href='/tour/<%= tourList[i]._id %>';"><img src="<% if( !locals.tourList[i].image || tourList[i].image == undefined || tourList[i].image == '' ) { %>/img/blank_tour.png<% } else { %><%= tourList[i].image %><% } %>" alt="" /></div>
 
-                      <div class="tour_bar <% if( tourList[i].participant_count >= tourList[i].member ) { %>tour_complete<% } else { %>tour_uncomplete<% } %>" onclick="location.href='/tour/<%= tourList[i]._id %>';">
-                          <span class="tour_bar_text_left"><p><%= tourList[i].participant_count %>/<%= tourList[i].member %> 모집 중</p></span>
+                      <% if( tourList[i].participant_count >= tourList[i].member || tourList[i].status == 'FINISH' ) { %>
+                          <div class="tour_bar tour_complete" onclick="location.href='/tour/<%= tourList[i]._id %>';">
+                              <span class="tour_bar_text_left"><p><%= tourList[i].participant_count %>/<%= tourList[i].member %> 모집 마감</p></span>
+                      <% } else { %>
+                          <div class="tour_bar tour_uncomplete" onclick="location.href='/tour/<%= tourList[i]._id %>';">
+                              <span class="tour_bar_text_left"><p><%= tourList[i].participant_count %>/<%= tourList[i].member %> 모집 중</p></span>
+                      <% } %>
                           <span class="right"><img src="img/ic-keyboard-arrow-right-white.svg" alt="" /></span>
                           <span class="tour_bar_text_right"><p>자세히 보기</p></span>
                       </div>
@@ -120,8 +125,13 @@
                   <div class="tour">
                       <div class="tour_image" onclick="location.href='/tour/<%= scheduleTourList[i]._id %>';"><img src="<% if( !locals.scheduleTourList[i].image || scheduleTourList[i].image == undefined || scheduleTourList[i].image == '' ) { %>/img/blank_tour.png<% } else { %><%= scheduleTourList[i].image %><% } %>" alt="" /></div>
 
-                      <div class="tour_bar <% if( scheduleTourList[i].participant_count >= scheduleTourList[i].member ) { %>tour_complete<% } else { %>tour_uncomplete<% } %>" onclick="location.href='/tour/<%= scheduleTourList[i]._id %>';">
-                          <span class="tour_bar_text_left"><p><%= scheduleTourList[i].participant_count %>/<%= scheduleTourList[i].member %> 모집 중</p></span>
+                      <% if( scheduleTourList[i].participant_count >= scheduleTourList[i].member || scheduleTourList[i].status == 'FINISH' ) { %>
+                          <div class="tour_bar tour_complete" onclick="location.href='/tour/<%= scheduleTourList[i]._id %>';">
+                              <span class="tour_bar_text_left"><p><%= scheduleTourList[i].participant_count %>/<%= scheduleTourList[i].member %> 모집 마감</p></span>
+                      <% } else { %>
+                          <div class="tour_bar tour_uncomplete" onclick="location.href='/tour/<%= scheduleTourList[i]._id %>';">
+                              <span class="tour_bar_text_left"><p><%= scheduleTourList[i].participant_count %>/<%= scheduleTourList[i].member %> 모집 중</p></span>
+                      <% } %>
                           <span class="right"><img src="img/ic-keyboard-arrow-right-white.svg" alt="" /></span>
                           <span class="tour_bar_text_right"><p>자세히 보기</p></span>
                       </div>
@@ -230,8 +240,13 @@
                             else
                                 html += " <div class='tour_image' onclick='location.href=\"/tour/"+result.tourList[i]._id+"\";'><img src='"+result.tourList[i].image+"' alt='' /></div>";
 
-                            html+= "      <div class='tour_bar "+(result.tourList[i].participant_count >= result.tourList[i].member ? "tour_complete" : "tour_uncomplete")+"' onclick='location.href=\"/tour/"+result.tourList[i]._id+"\";'>";
-                            html+= "          <span class='tour_bar_text_left'><p>"+result.tourList[i].participant_count+"/"+result.tourList[i].member+" 모집 중</p></span>";
+                            if (result.tourList[i].participant_count >= result.tourList[i].member || result.tourList[i].status === 'FINISH') {
+                                html+= "      <div class='tour_bar tour_complete' onclick='location.href=\"/tour/"+result.tourList[i]._id+"\";'>";
+                                html+= "          <span class='tour_bar_text_left'><p>"+result.tourList[i].participant_count+"/"+result.tourList[i].member+" 모집 마감</p></span>";
+                            } else {
+                                html+= "      <div class='tour_bar tour_uncomplete' onclick='location.href=\"/tour/"+result.tourList[i]._id+"\";'>";
+                                html+= "          <span class='tour_bar_text_left'><p>"+result.tourList[i].participant_count+"/"+result.tourList[i].member+" 모집 중</p></span>";
+                            }
                             html+= "          <span class='right'><img src='img/ic-keyboard-arrow-right-white.svg' alt='' /></span>";
                             html+= "          <span class='tour_bar_text_right'><p>자세히 보기</p></span>";
                             html+= "      </div>";
@@ -262,8 +277,13 @@
                             else
                                 html += " <div class='tour_image' onclick='location.href=\"/tour/"+result.scheduleTourList[i]._id+"\";'><img src='"+result.scheduleTourList[i].image+"' alt='' /></div>";
 
-                            html+= "      <div class='tour_bar "+(result.scheduleTourList[i].participant_count >= result.scheduleTourList[i].member ? "tour_complete" : "tour_uncomplete")+"' onclick='location.href=\"/tour/"+result.scheduleTourList[i]._id+"\";'>";
-                            html+= "          <span class='tour_bar_text_left'><p>"+result.scheduleTourList[i].participant_count+"/"+result.scheduleTourList[i].member+" 모집 중</p></span>";
+                            if (result.scheduleTourList[i].participant_count >= result.scheduleTourList[i].member || result.scheduleTourList[i].status === 'FINISH') {
+                                html+= "      <div class='tour_bar tour_complete' onclick='location.href=\"/tour/"+result.scheduleTourList[i]._id+"\";'>";
+                                html+= "          <span class='tour_bar_text_left'><p>"+result.scheduleTourList[i].participant_count+"/"+result.scheduleTourList[i].member+" 모집 마감</p></span>";
+                            } else {
+                                html+= "      <div class='tour_bar tour_uncomplete' onclick='location.href=\"/tour/"+result.scheduleTourList[i]._id+"\";'>";
+                                html+= "          <span class='tour_bar_text_left'><p>"+result.scheduleTourList[i].participant_count+"/"+result.scheduleTourList[i].member+" 모집 중</p></span>";
+                            }
                             html+= "          <span class='right'><img src='img/ic-keyboard-arrow-right-white.svg' alt='' /></span>";
                             html+= "          <span class='tour_bar_text_right'><p>자세히 보기</p></span>";
                             html+= "      </div>";
