강사별, 교육생별 참여 인원제한 로직 추가

--- a/views/tour_detail.ejs
+++ b/views/tour_detail.ejs
@@ -384,19 +384,22 @@ for(var i=0; i<interesting.length; i++) {
                 history.back();
             };
 
-            document.getElementsByClassName('container')[0].onclick = function() {
+            document.getElementsByClassName('container')[0].onclick = function(event) {
+                event.preventDefault();
                 if( '<%= userId %>' == '<%= ins_id %>' || document.getElementsByClassName('container')[0].classList.contains('blue_text') )
                     return;
 
                 participateTour();
             };
-            document.getElementsByClassName('container')[1].onclick = function() {
+            document.getElementsByClassName('container')[1].onclick = function(event) {
+                event.preventDefault();
                 if( '<%= userId %>' == '<%= ins_id %>' || document.getElementsByClassName('container')[1].classList.contains('blue_text') )
                     return;
 
                 interestTour();
             };
-            document.getElementsByClassName('container')[2].onclick = function() {
+            document.getElementsByClassName('container')[2].onclick = function(event) {
+                event.preventDefault();
                 if( '<%= userId %>' == '<%= ins_id %>' || document.getElementsByClassName('container')[2].classList.contains('blue_text') )
                     return;
 
