--- a/views/tour_participant.ejs
+++ b/views/tour_participant.ejs
@@ -15,7 +15,7 @@
             #back { position: absolute; width: 16px; opacity: 0.54; top: 0; left: 0; margin-top: 12px; margin-left: 12px; }
             #btn_edit, #btn_save { top: 0; padding-top: 0; line-height: 50px; }
             #header_title { top: 0; padding-top: 0; line-height: 50px; }
-            .stu_info_box span:nth-of-type(2) h5 { margin-top: -25px; }
+            .stu_info_box span:nth-of-type(2) h5.ins { margin-top: -25px; }
             .participant_memo_empty { font-size: 14px; color: #bbbbbb; margin-top: 3px; }
             .participant_memo_text { font-size: 14px; color: #333333; margin-top: 3px; line-height: 1.43; }
         </style>
@@ -26,7 +26,7 @@
             <span id="header_title" class="logo_mini">참여자 정보</span>
             <div id="btn_back"><img src="/img/left-arrow.svg" id="back" alt="" /></div>
             <span class="header_save btn" id="btn_edit">수정</span>
-            <span class="header_save btn hidden" id="btn_save">자장</span>
+            <span class="header_save btn hidden" id="btn_save">저장</span>
         </div>
 
         <div class="only_ins_read">
@@ -40,20 +40,21 @@
                 </span>
 
                 <span>
-                    <h5><%= participant[i].name %></h5>
+                    <h5 class="<% if (participant[i].type == 1) { %>ins<% } %>"><%= participant[i].name %></h5>
+                    <% if (participant[i].type == 2) { %><p>투어/교육 <%= participant[i].tourCount %>회</p><% } %>
                 </span>
                 <% if (participant[i].type == 1) { %>
                     <p>강사</p>
                 <% } else { %>
                     <p><% if (participant[i].gender == 1) { %>남성<% } else { %>여성<% } %>/<%= participant[i].height %>cm/<%= participant[i].weight %>kg/<%= participant[i].foot %>mm<% if (participant[i].disease != undefined && participant[i].disease != "") { %>/<%= participant[i].disease %><% } %></p>
                 <% } %>
-                <div class="participant_memo">
-                    <% if (participant[i].memo == "") { %>
+                <div class="participant_memo <% if (participant[i].memo == undefined) { %>signout<% } %>">
+                    <% if (participant[i].memo == undefined || participant[i].memo == "") { %>
                         <p class="participant_memo_empty">메모없음</p>
-                        <p class="participant_memo_text hidden"></p>
+                        <pre class="participant_memo_text hidden" style="white-space: pre-wrap; background: white;"></pre>
                     <% } else { %>
                         <p class="participant_memo_empty hidden">메모없음</p>
-                        <p class="participant_memo_text"><%= participant[i].memo %></p>
+                        <pre class="participant_memo_text" style="white-space: pre-wrap; background: white;"><%= participant[i].memo %></pre>
                     <% } %>
                 </div>
                 <div class="participant_memo_edit hidden">
@@ -71,39 +72,11 @@
             var tourId = '<%= _id %>';
 
             document.getElementById('btn_back').onclick = function() {
-                history.back();
-            };
-
-            document.getElementById('btn_edit').onclick = function() {
-                document.getElementById('btn_edit').classList.add('hidden');
-                document.getElementById('btn_save').classList.remove('hidden');
-
-                for (var i = 0; i < document.getElementsByClassName('participant_memo').length; i++) {
-                    document.getElementsByClassName('participant_memo')[i].classList.add('hidden');
-                    document.getElementsByClassName('participant_memo_edit')[i].classList.remove('hidden');
-                }
-            };
-
-            document.getElementById('btn_save').onclick = function() {
-                var params = [];
-                for (var i = 0; i < document.getElementsByClassName('input_memo').length; i++) {
-                    params.push({
-                        id: document.getElementsByClassName('input_memo')[i].getAttribute('id'),
-                        type: document.getElementsByClassName('input_memo')[i].getAttribute('type'),
-                        memo: document.getElementsByClassName('input_memo')[i].value
-                    });
-                }
-
-                httpSend.send("/tour/participate/memo", {
-                    tourId          : tourId,
-                    participant     : params
-                }, "POST", function(result) {
-                    console.log(result);
-
+                if (document.getElementById('btn_edit').classList.contains('hidden')) {
                     document.getElementById('btn_edit').classList.remove('hidden');
                     document.getElementById('btn_save').classList.add('hidden');
 
-                    for (var i = 0; i < document.getElementsByClassName('participant_memo').length; i++) {
+                    for (var i = 1; i < document.getElementsByClassName('participant_memo').length; i++) {
                         document.getElementsByClassName('participant_memo_edit')[i].classList.add('hidden');
                         document.getElementsByClassName('participant_memo')[i].classList.remove('hidden');
 
@@ -111,20 +84,56 @@
                         if (memo === '') {
                             document.getElementsByClassName('participant_memo_empty')[i].classList.remove('hidden');
                             document.getElementsByClassName('participant_memo_text')[i].classList.add('hidden');
-                            document.getElementsByClassName('participant_memo_text')[i].innerHTML = '';
                         } else {
-                            document.getElementsByClassName('participant_memo_text')[i].innerHTML = memo;
                             document.getElementsByClassName('participant_memo_text')[i].classList.remove('hidden');
                             document.getElementsByClassName('participant_memo_empty')[i].classList.add('hidden');
                         }
+                        document.getElementsByClassName('input_memo')[i].value = document.getElementsByClassName('participant_memo_text')[i].innerHTML;
                     }
-                }, function(errorCode, errorMessage) {
-                    console.log(errorMessage);
-                });
+                } else {
+                    history.back();
+                }
             };
 
+            document.getElementById('btn_edit').onclick = function() {
+                document.getElementById('btn_edit').classList.add('hidden');
+                document.getElementById('btn_save').classList.remove('hidden');
 
+                for (var i = 1; i < document.getElementsByClassName('participant_memo').length; i++) {
+                    document.getElementsByClassName('participant_memo')[i].classList.add('hidden');
+                    document.getElementsByClassName('participant_memo_edit')[i].classList.remove('hidden');
+                }
+            };
 
+            document.getElementById('btn_save').onclick = function() {
+                document.getElementById('btn_edit').classList.remove('hidden');
+                document.getElementById('btn_save').classList.add('hidden');
+
+                for (var i = 1; i < document.getElementsByClassName('input_memo').length; i++) {
+                    document.getElementsByClassName('participant_memo_edit')[i].classList.add('hidden');
+                    document.getElementsByClassName('participant_memo')[i].classList.remove('hidden');
+
+                    var memo = document.getElementsByClassName('input_memo')[i].value;
+                    if (memo === '' || document.getElementsByClassName('participant_memo')[i].classList.contains('signout')) {
+                        document.getElementsByClassName('participant_memo_empty')[i].classList.remove('hidden');
+                        document.getElementsByClassName('participant_memo_text')[i].classList.add('hidden');
+                        document.getElementsByClassName('participant_memo_text')[i].innerHTML = '';
+                    } else {
+                        document.getElementsByClassName('participant_memo_text')[i].innerHTML = memo;
+                        document.getElementsByClassName('participant_memo_text')[i].classList.remove('hidden');
+                        document.getElementsByClassName('participant_memo_empty')[i].classList.add('hidden');
+                    }
+
+                    httpSend.send("/follow/memo/update", {
+                        bgnId   : document.getElementsByClassName('input_memo')[i].getAttribute('id'),
+                        memo    : memo
+                    }, "POST", function(result) {
+
+                    }, function(errorCode, errorMessage) {
+                        console.log(errorMessage);
+                    });
+                }
+            };
         </script>
     </body>
 </html>
